[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainScene/textures/enemyUFO.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://audio/laserSFX.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 46.4753

[node name="Enemy" type="Area2D" groups=[
"Damageable",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.163437, 0.12085 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.74913, 0.999977 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.56189, 0.374561 )
scale = Vector2( 4.61467, 4.63339 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringPositions"]

[node name="RightGun" type="Node2D" parent="FiringPositions"]

[node name="LaserSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.429

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
